# l3_harris_challenge

./: .gitignore  README.md  pyproject.toml
src/: cli.py  search.py
tests/: test_cli.py  test_search.py
